# data-palette-backend

./: .gitignore  README.md  dummy_data.csv  main.py  pyproject.toml  schemas.py  train.py
.github/: copilot-instructions.md
