[project]
name = "data-palette-backend"
version = "0.1.0"
description = "Data Palette backend API and ML model"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "tensorflow",
    "uvicorn",
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib",
    "pydantic",
]
